--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 
   <p id="result"></p>
   <small id="copied-msg"></small>
+
+<footer class="footer">
+  Powered by <strong>WG</strong>
+</footer>
+
 </main>
 
 
