--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="css/style.css">
-<!---- <link rel="icon" href="favicon.png"> -->
+<link rel="icon" type="image/png" href="favicon.png">
 
 <title>Prato Certo</title>
 </head>
@@ -19,6 +19,9 @@
 
     <div id="tamanhos"></div>
 
+    <h2 class="secao-titulo">🥤 Bebidas</h2>
+    <div id="bebidas"></div>
+
     <div id="total"></div>
 
    <div class="botao-box">
@@ -26,8 +29,6 @@
         Continuar para entrega 🚚
     </button>
 </div>
-
-
 
 </div>
 
